--- a/css/Bio.css
+++ b/css/Bio.css
@@ -34,7 +34,6 @@ button {
     }
 }
 
-
 .header {
     display: flex;
     flex-direction: column;
@@ -144,4 +143,17 @@ button {
             }
         }
     }
+}
+
+.nav {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100px;
+    display: flex;
+    background-color: white;
+    border-top: 1px solid #e0e0e0;
+    padding: 10px 0;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
 }
