--- a/css/Bio.css
+++ b/css/Bio.css
@@ -348,7 +348,7 @@ button {
     display: flex;
     flex-direction: column;
     gap: 15px;
-    margin: 0px auto;
+    margin: 0px auto 20px;
 }
 
 .nav {
@@ -381,7 +381,7 @@ button {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 15px 20px 5px;
+    padding: 10px 20px 15px;
     box-shadow: 0 5px 30px rgba(0, 0, 0, 0.3);
     background: #fff;
     visibility: hidden;
@@ -390,13 +390,156 @@ button {
     z-index: 100;
     display: flex;
     flex-direction: column;
+    height: 80vh;
 }
 
-#popup-follower.active {
+#popup-follower.active-follower {
     visibility: visible;
     opacity: 1;
 }
 
+.overlay-follower {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease;
+    z-index: 99;
+}
+
+.overlay-follower.active-follower {
+    opacity: 1;
+    visibility: visible;
+}
+
+.heading-follower {
+    display: flex;
+    margin-bottom: 10px;
+    width: 100%;
+    border-bottom: 1px solid var(--outline);
+}
+
+.follow-number {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    border-bottom: 1px solid var(--outline);
+}
+
+.tab {
+    background: none;
+    border: none;
+    color: var(--secondary-text-color);
+    cursor: pointer;
+    font-size: 0.9rem;
+    font-weight: 600;
+    font-family: var(--font-family-system);
+    text-align: center;
+}
+
+.tab.active {
+    color: var(--primary-color);
+    position: relative;
+    padding: 10px 0;
+}
+
+.tab.active::after {
+    content: '';
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    border-radius: 16px ;
+    height: 2px;
+    background-color: var(--primary-color); 
+}
+
+
+.search-result-item {
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    padding: 6px 5px;
+    border-radius: var(--block-content-border-radius);
+    width: 100%;
+}
+
+.profile-pic {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 15px;
+    z-index: 2; 
+    flex-shrink: 0;
+}
+
+.profile-pic img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.search-username {
+    font-weight: 600;
+    text-decoration: none;
+    color: var(--primary-text-color)
+}
+
+.search-username:hover {
+    text-decoration: underline;
+}
+
+.search-content {
+    max-width: calc(100% - 80px);
+    flex-grow: 1;
+    z-index: 2; 
+}
+
+.search-text p {
+    margin: 0;
+    font-size: 0.9rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.search-user-bio {
+    color: var(--secondary-text-color);
+}
+
+.follow-btn {
+    margin-left: auto;
+    padding: 3px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    border: 1px solid var(--button-primary-outline);
+    font-weight: 600;
+    font-family: var(--font-family-system);
+    background-color: transparent;
+    z-index: 2;
+}
+
+.follow-btn:hover {
+    background-color: var(--primary-color);
+    color: white
+}
+
+.follow-btn p {
+    font-size: 0.9rem;
+    margin-bottom: 0px;
+}
+
+.follow-btn.following {
+    color: var(--secondary-text-color);
+}
+
+.follow-result {
+    overflow-y: auto;
+}
 
 @media (max-width: 768px) {
     .name {
@@ -404,3 +547,4 @@ button {
     }
     
 }
+
