--- a/css/Bio.css
+++ b/css/Bio.css
@@ -54,14 +54,13 @@ button {
     z-index: 99;
     border-radius: 0;
 
-
     /* border: var(--bs-border-width) solid var(--bs-border-color); */
-    border-radius: 12px;
     padding: 1rem;
 
+    font-size: 0.9rem;
+
     .change {
-        width: 100;
-        max-width: 400px;
+        /* max-width: 400px; */
         margin: auto;
 
         background-color: white;
@@ -103,10 +102,13 @@ button {
         }
 
         label {
-            font-weight: bold;
+            font-weight: 600;
+            font-family: var(--font-family-system);
+            font-size: 0.9rem;
         }
 
         input {
+            width: 100%;
             background-color: var(--bs-body-bg);
             border: var(--bs-border-width) solid var(--bs-border-color);
             height: 2rem;
@@ -120,6 +122,8 @@ button {
             border: var(--bs-border-width) solid var(--bs-border-color);
             border-radius: 10px;
             padding: .5rem;
+            width: 100%;
+            resize: none;
         }
     }
 }
@@ -139,6 +143,7 @@ button {
 
 .full-name {
     font-size: 1.2rem;
+    font-weight: bold;
     font-family: var(--font-family-system);
 }
 
@@ -167,8 +172,21 @@ button {
     div {
         width: min-content;
         position: absolute;
-        right: 0;
+        bottom: 0;
         /* background-color: blue; */
+    }
+
+    .avatar-upload {
+        height: 100%;
+        aspect-ratio: 1/1;
+        background-color: rgba(0, 0, 0, 0.3); /* Màu nền đen */
+        border-radius: 50%;
+        cursor: pointer;
+        transition: transform 0.2s ease;
+
+        .upload-label:hover {
+            transform: scale(0.9);
+        }
     }
 }
 
@@ -349,6 +367,7 @@ button {
     font-family: var(--font-family-system);
     font-size: 0.85rem;
     border-radius: 20px;
+    z-index: 1;
 }
 
 .like-button-clicked svg path {
@@ -384,6 +403,7 @@ button {
     font-family: var(--font-family-system);
     background-color: transparent;
     z-index: 2;
+    color: var(--primary-color)
 }
 
 .post {
@@ -410,7 +430,7 @@ button {
     height: 100%;
     border-radius: 20px;
     padding: 10px;
-    margin-left: -10px;
+    margin-left: -5px;
 }
 
 .post-block:hover {
@@ -443,6 +463,7 @@ button {
     border-top: 1px solid #e0e0e0;
     padding: 10px 0;
     box-sizing: border-box;
+    z-index: 10;
 }
 
 .post-count:hover,
@@ -460,6 +481,7 @@ button {
 }
 
 #popup-follower {
+    border-radius: var(--block-content-border-radius);
     position: fixed;
     top: 50%;
     left: 50%;
@@ -556,7 +578,7 @@ button {
     height: 40px;
     border-radius: 50%;
     overflow: hidden;
-    margin-right: 15px;
+    margin-right: 10px;
     z-index: 2; 
     flex-shrink: 0;
 }
@@ -595,6 +617,7 @@ button {
 }
 
 .follow-btn {
+    font-size: 0.9rem;
     margin-left: auto;
     padding: 3px 10px;
     border-radius: 5px;
@@ -604,6 +627,7 @@ button {
     font-family: var(--font-family-system);
     background-color: transparent;
     z-index: 2;
+    color: var(--primary-color)
 }
 
 .follow-btn:hover {
@@ -616,9 +640,17 @@ button {
     margin-bottom: 0px;
 }
 
-.follow-btn.following {
+.follow-btn-clicked {
+    font-size: 0.9rem;
+    background-color: transparent;
     color: var(--secondary-text-color);
 }
+
+.follow-btn-clicked:hover {
+    background-color: transparent;
+    color: var(--secondary-text-color);
+}
+
 
 .follow-result {
     overflow-y: auto;
@@ -628,6 +660,4 @@ button {
     .name {
         text-align: center;
     }
-
 }
-
