--- a/css/Bio.css
+++ b/css/Bio.css
@@ -13,14 +13,16 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin-bottom: 5rem;
 }
 
 .main {
-    margin: 20px auto;
+    margin: 0 auto 15px;
     padding: 15px 20px;
     background: white;
     border-radius: 10px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    position: relative;
 }
 
 button {
@@ -98,7 +100,6 @@ button {
                 object-fit: cover;
             }
 
-            div {}
         }
 
         label {
@@ -131,6 +132,7 @@ button {
 .header {
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 
 .row>* {
@@ -451,7 +453,6 @@ button {
     display: flex;
     flex-direction: column;
     gap: 15px;
-    margin: 0px auto 20px;
 }
 
 .nav {
@@ -562,7 +563,6 @@ button {
     height: 2px;
     background-color: var(--primary-color); 
 }
-
 
 .search-result-item {
     position: relative;
