--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -131,9 +131,18 @@
             </div>
         </form>
     </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.8/purify.min.js"></script>
     <script src="/script/add-post.js"></script>
     <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const textareas = document.getElementsByTagName('textarea');
+            for(let textarea of textareas) {
+                textarea.addEventListener('input', function() {
+                    this.value = DOMPurify.sanitize(this.value);
+                });
+            }
+        });
+
         const user = {
             id: '{{user.id}}'
         };
