--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -147,10 +147,18 @@
         </div>
     </div>
 </div>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.8/purify.min.js"></script>
 <script src="/script/bio.js"></script>
 
 <script type="module">
+    document.addEventListener('DOMContentLoaded', function() {
+        const textareas = document.getElementsByTagName('textarea');
+        for(let textarea of textareas) {
+            textarea.addEventListener('input', function() {
+                this.value = DOMPurify.sanitize(this.value);
+            });
+        }
+    });
     const fetchButton = document.querySelector("#fetch")
     fetchButton.addEventListener("click", fetchInfo)
     // const changeButton = document.querySelector("")
