--- a/Pages/css/Bio.css
+++ b/Pages/css/Bio.css
@@ -181,7 +181,7 @@ button {
         aspect-ratio: 1/1;
         background-color: rgba(0, 0, 0, 0.3); /* Màu nền đen */
         border-radius: 50%;
-        cursor: pointer;
+        /* cursor: pointer; */
         transition: transform 0.2s ease;
 
         .upload-label:hover {
