--- a/views/post.hbs
+++ b/views/post.hbs
@@ -106,7 +106,7 @@
                     </div>
                     <div class="comment-block">
                         {{#if content}}
-                            <p class="text">{{content}}</p>
+                            <p class="text">{{{content}}}</p>
                         {{/if}}
                         {{#if media.urls.[0]}}
                             <img src="{{media.urls.[0]}}" alt="Comment image" class="mt-1 comment-image">
@@ -144,18 +144,15 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.8/purify.min.js"></script>
 <script src="/script/Post.js"></script>
 <script>
-document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function() {
     const textareas = document.getElementsByTagName('textarea');
     for(let textarea of textareas) {
         textarea.addEventListener('input', function() {
-            // Check if content contains HTML tags
-            const containsHTML = /<[a-z][\s\S]*>/i.test(this.value);
-            
-            if (containsHTML) {
-                // Only sanitize if HTML tags detected
-                this.value = DOMPurify.sanitize(this.value);
-            }
-            // If no HTML tags, keep original content unchanged
+            // Convert HTML tags to string representation
+            this.value = this.value
+                .replace(/</g, '&lt;')
+                .replace(/>/g, '&gt;')
+                .replace(/\n/g, '<br>');
         });
     }
 });
