--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -21,7 +21,7 @@
                 <div class="text-end">
                     <p><a href="forgetpassword">Forgot password?</a></p>
                 </div>
-                <div id="out" style="color: red"></div>
+                <div id="out" style="color: red; font-size:small"></div>
                 <div style="">{{instruction}}</div>
 
                 <!-- Sign In Button -->
